--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -37,6 +37,7 @@ $f24px: #{24/$fbase}rem;
 $f25px: #{25/$fbase}rem;
 $f26px: #{26/$fbase}rem;
 $f28px: #{28/$fbase}rem;
+$f29px: #{29/$fbase}rem;
 $f30px: #{30/$fbase}rem;
 $f31px: #{31/$fbase}rem;
 $f32px: #{32/$fbase}rem;
@@ -50,8 +51,10 @@ $f50px: #{50/$fbase}rem;
 $f55px: #{55/$fbase}rem;
 $f60px: #{60/$fbase}rem;
 $f63px: #{63/$fbase}rem;
+$f64px: #{64/$fbase}rem;
 $f69px: #{69/$fbase}rem;
 $f72px: #{72/$fbase}rem;
+$f75px: #{75/$fbase}rem;
 $f76px: #{76/$fbase}rem;
 $f80px: #{80/$fbase}rem;
 $f100px: #{100/$fbase}rem;
