--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -23,6 +23,23 @@ img {
   max-width: 100%;
 }
 
+h3 {
+  font-weight: 500;
+  font-size: $f50px;
+  line-height: $f75px;
+  letter-spacing: 0.03em;
+  color: $cDark;
+  margin-bottom: $f64px;
+}
+
+.mb-25 {
+  margin-bottom: $f25px;
+}
+
+.bg-white {
+  background: $white;
+}
+
 .h100 {
   height: 100%;
 }
@@ -86,6 +103,11 @@ header {
   html {font-size: 14px;}
 }
 
+@include media-breakpoint-up(lg) {
+  .mb-lg-64 {
+    margin-bottom: $f64px;
+  }
+}
 @include media-breakpoint-down(lg) {
   .block-grey {
     background: $gray;
@@ -121,6 +143,14 @@ header {
     letter-spacing: 0.01em;
     margin-top: $f25px;
     margin-bottom: $f17px;
+  }
+
+  h3 {
+    font-size: $f28px;
+    line-height: $f34px;
+    letter-spacing: 0.03em;
+    font-weight: 500;
+    margin-bottom: $f25px;
   }
 }
 
