--- a/src/scss/blocks/corp.scss
+++ b/src/scss/blocks/corp.scss
@@ -11,8 +11,21 @@
     color: $cDark;
   }
 
-  iframe {
+  .youtube-img {
     height: 411px;
+  }
+  .youtube-icon {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 15px;
+    right: 15px;
+    img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
 
@@ -26,7 +39,7 @@
     .text {
       font-size: $f14px;
     }
-    iframe {
+    .youtube-img {
       height: 200px;
     }
   }
