--- a/src/scss/variable.scss
+++ b/src/scss/variable.scss
@@ -33,6 +33,7 @@ $f18px: #{18/$fbase}rem;
 $f19px: #{19/$fbase}rem;
 $f20px: #{20/$fbase}rem;
 $f22px: #{22/$fbase}rem;
+$f23px: #{23/$fbase}rem;
 $f24px: #{24/$fbase}rem;
 $f25px: #{25/$fbase}rem;
 $f26px: #{26/$fbase}rem;
