--- a/src/scss/menu.scss
+++ b/src/scss/menu.scss
@@ -5,6 +5,14 @@
   left: 0;
   right: 0;
   z-index: 10;
+
+  &.fixed {
+    background: $bg;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+  }
   ul {
     list-style: none;
     border-bottom: 1px solid $green;
